--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -500,3 +500,29 @@
 	            thus contribute to the conceptual unification of concurrency.},
 }
 
+@inbook{selinger-2011,
+	author = "Selinger, P.",
+	editor = "Coecke, Bob",
+	title = "A Survey of Graphical Languages for Monoidal Categories",
+	bookTitle = "New Structures for Physics",
+	year = "2011",
+	publisher = "Springer Berlin Heidelberg",
+	address = "Berlin, Heidelberg",
+	pages = "289--355",
+	abstract = "This article is intended as a reference guide to various notions
+	            of monoidal categories and their associated string diagrams. It is
+	            hoped that this will be useful not just to mathematicians, but also
+	            to physicists, computer scientists, and others who use diagrammatic
+	            reasoning. We have opted for a somewhat informal treatment of
+	            topological notions, and have omitted most proofs. Nevertheless,
+	            the exposition is sufficiently detailed to make it clear what is
+	            presently known, and to serve as a starting place for more in-depth
+	            study. Where possible, we provide pointers to more rigorous
+	            treatments in the literature. Where we include results that have
+	            only been proved in special cases, we indicate this in the form of
+	            caveats.",
+	isbn = "978-3-642-12821-9",
+	doi = "10.1007/978-3-642-12821-9_4",
+	url = "https://doi.org/10.1007/978-3-642-12821-9_4",
+}
+
