update monoidal cat examples

--- a/writeup/category-theory.tex
+++ b/writeup/category-theory.tex
@@ -600,9 +600,7 @@ axioms of a monoidal category more concrete.
   There are many more examples of monoidal categories throughout mathematics.
   \begin{itemize}
     % TODO: is this true?
-    \item $\scat{Vect}_\kk$ is monoidal twice: once with the direct sum and once
-      with the tensor product of vector spaces.
-    \item $\scat{Grp}$ is monoidal with the tensor product of groups.
+    \item $\scat{Vect}_\kk$ is monoidal with the tensor product of vector spaces.
     \item $\scat{Cat}$ is monoidal with the product category.
     \item The categories of \Cref{ex:categories of computable maps}
       are monoidal with the Cartesian product of sets. In particular, the
@@ -636,7 +634,11 @@ by~\cite{selinger-2011}; we give a basic outline here.
 
 Consider a monoidal category $\cat{C}$ with three morphisms $f: x\to y$, $g:
 w\to z$, and $h: y\otimes z\to u$. We can can form a new morphism $h\circ
-(f\otimes g): x\otimes w\to u$.
+(f\otimes g): x\otimes w\to u$. We encode this fact in the following
+\emph{string diagram}: \[
+  % \begin{pic}
+  % \end{pic}
+\]
 
 \subsection{Commutativity: Braiding and Symmetry}
 
