--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -66,9 +66,6 @@
 	added-at = {2009-09-18T21:22:09.000+0200},
 	address = {New York},
 	author = {MacLane, Saunders},
-	biburl = {
-	          https://www.bibsonomy.org/bibtex/29e8ca8b4bf357cc41e40e98cca25cb8c/minas
-	          },
 	interhash = {51566d046db4c3ea930c2b5ca79173f1},
 	intrahash = {9e8ca8b4bf357cc41e40e98cca25cb8c},
 	keywords = {CategoryTheory},
@@ -408,9 +405,6 @@
 	added-at = {2014-03-03T20:31:26.000+0100},
 	address = {Boston, MA},
 	author = {Sipser, Michael},
-	biburl = {
-	          https://www.bibsonomy.org/bibtex/2a275d239d3a005a2a0825e49ce8dced5/ytyoun
-	          },
 	edition = {Third},
 	interhash = {ba5fd05e9f15a677c2c9e619c57de9a7},
 	intrahash = {a275d239d3a005a2a0825e49ce8dced5},
@@ -525,4 +519,45 @@
 	doi = "10.1007/978-3-642-12821-9_4",
 	url = "https://doi.org/10.1007/978-3-642-12821-9_4",
 }
+
+
+@inproceedings{wadler-1989,
+	author = {Wadler, Philip},
+	title = {Theorems for free!},
+	year = {1989},
+	isbn = {0897913280},
+	publisher = {Association for Computing Machinery},
+	address = {New York, NY, USA},
+	url = {https://doi.org/10.1145/99370.99404},
+	doi = {10.1145/99370.99404},
+	booktitle = {Proceedings of the Fourth International Conference on Functional
+	             Programming Languages and Computer Architecture},
+	pages = {347–359},
+	numpages = {13},
+	location = {Imperial College, London, United Kingdom},
+	series = {FPCA '89},
+}
+
+@inproceedings{reynolds-1983,
+	added-at = {2019-07-27T00:00:00.000+0200},
+	author = {Reynolds, John C.},
+	booktitle = {IFIP Congress},
+	crossref = {conf/ifip/1983},
+	editor = {Mason, R. E. A.},
+	interhash = {c3f40c3e8bb67eb3595eb337fec8404f},
+	intrahash = {6011018c72ad4c39d48a131df9b3fd15},
+	isbn = {0-444-86729-5},
+	keywords = {dblp},
+	pages = {513-523},
+	publisher = {North-Holland/IFIP},
+	timestamp = {2019-07-30T11:50:21.000+0200},
+	title = {Types, Abstraction and Parametric Polymorphism.},
+	url = {http://dblp.uni-trier.de/db/conf/ifip/ifip83.html#Reynolds83},
+	year = 1983,
+}
+
+
+
+
+
 
